--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">PizzaTime</string>
     <string name="title_activity_menu">Menu</string>
+    <string name="title_activity_order">Order</string>
 </resources>
